# PII_detection

./: README.md  pyproject.toml
PII_detection/: __init__.py  main.py
PII_detection/config/: __init__.py  data_config.json  loader.py  paths.json
PII_detection/data/: account.py  account_holder.py  bank_statement.py  pdfs.py  synthetic_gen.py
PII_detection/data/samples/html/: BankAustria.html  Barclays.html  DeutscheBank.html  HSBC.html  N26.html  RBS.html  Revolut.html
PII_detection/model/: loader.py
PII_detection/utils/: logging.py
config/: config.json
data/: account.py  account_holder.py  bank_statement.py  main.py  synthetic_gen.py
data/config/: config.json
data/src/: account_holder.py  bank_statement.py  synthetic_gen.py
data/templates/: Bank_of_Austria.html
data/templates/html/: Bank_of_Austria.html  Barclays.html
src/: account_holder.py  bank_statement.py  main.py  parse_pdfs.py  synthetic_gen.py  text_gen.py
