[project]
name = "PII_detection"
version = "0.1.0"
description = "A PII detection and redaction system for financial documents using BERT-based NER."
authors = [
    { name = "Dimitris Chrysovergis" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
	"annotated-types",
	"blis",
	"catalogue",
	"certifi",
	"cffi",
	"charset-normalizer",
	"click",
	"cloudpathlib",
	"colorama",
	"confection",
	"cryptography",
	"cymem",
	"en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63",
	"Faker",
	"filelock",
	"fsspec",
	"greenlet",
	"hf-xet",
	"huggingface-hub",
	"idna",
	"Jinja2",
	"MarkupSafe",
	"mpmath",
	"murmurhash",
	"networkx",
	"numpy",
	"nvidia-cublas-cu12",
	"nvidia-cuda-cupti-cu12",
	"nvidia-cuda-nvrtc-cu12",
	"nvidia-cuda-runtime-cu12",
	"nvidia-cudnn-cu12",
	"nvidia-cufft-cu12",
	"nvidia-cufile-cu12",
	"nvidia-curand-cu12",
	"nvidia-cusolver-cu12",
	"nvidia-cusparse-cu12",
	"nvidia-cusparselt-cu12",
	"nvidia-nccl-cu12",
	"nvidia-nvjitlink-cu12",
	"nvidia-nvshmem-cu12",
	"nvidia-nvtx-cu12",
	"packaging",
	"phonenumbers",
	"playwright",
	"preshed",
	"presidio_analyzer",
	"presidio_anonymizer",
	"pycparser",
	"pydantic",
	"pydantic_core",
	"pyee",
	"PyYAML",
	"regex",
	"requests",
	"requests-file",
	"safetensors",
	"setuptools",
	"smart_open",
	"spacy",
	"spacy-legacy",
	"spacy-loggers",
	"srsly",
	"sympy",
	"tabulate",
	"thinc",
	"tldextract",
	"tokenizers",
	"torch",
	"tqdm",
	"transformers",
	"triton",
	"typer-slim",
	"typing-inspection",
	"typing_extensions",
	"tzdata",
	"urllib3",
	"wasabi",
	"weasel",
	"wrapt"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
