[project]
name = "PII_detection"
version = "0.1.0"
description = "A PII detection and redaction system for financial documents using BERT-based NER."
authors = [
    { name = "Dimitris Chrysovergis" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
	"annotated-types",
	"catalogue",
	"certifi",
	"cffi",
	"charset-normalizer",
	"click",
	"cloudpathlib",
	"colorama",
	"cryptography",
	"Faker",
	"filelock",
	"fsspec",
	"greenlet",
	"huggingface-hub",
	"idna",
	"Jinja2",
	"MarkupSafe",
	"mpmath",
	"networkx",
	"numpy",
	"packaging",
	"phonenumbers",
	"playwright",
	"pycparser",
	"PyYAML",
	"regex",
	"requests",
	"requests-file",
	"safetensors",
	"setuptools",
	"smart_open",
	"sympy",
	"tabulate",
	"thinc",
	"tldextract",
	"tokenizers",
	# "torch==2.4.0+cpu",
	"tqdm",
	"transformers",
	"typer-slim",
	"typing-inspection",
	"typing_extensions",
	"tzdata",
	"urllib3",
	"wasabi",
	"wrapt"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
